# python-weather

./: .dockerignore  .gitignore  Dockerfile.django  README.md  docker-compose.yml  main.py  pyproject.toml
core/: exceptions.py
siteweather/: manage.py  test_requests.py
siteweather/core/: exceptions.py
siteweather/locations/: admin.py  apps.py  dto.py  exceptions.py  models.py  repository.py  services.py  urls.py  views.py
siteweather/locations/clients/: openweather.py
siteweather/locations/migrations/: 0001_initial.py  0002_initial.py
siteweather/locations/templates/locations/: index.html  search-results.html
siteweather/logs/: logging.json
siteweather/siteweather/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
siteweather/siteweather/settings/: __init__.py  base.py  local.py  production.py  test.py
siteweather/tests/: conftest.py  tests.py
siteweather/tests/test_services/: test_auth_service.py  test_weather_integration.py
siteweather/users/: admin.py  apps.py  exceptions.py  forms.py  models.py  repository.py  services.py  urls.py  views.py
siteweather/users/migrations/: 0001_initial.py  0002_alter_user_login_alter_user_password.py  0003_remove_user_login_alter_user_password.py
siteweather/users/templates/users/: sign-in.html  sign-up.html
siteweather/weather/: models.py  urls.py  views.py
siteweather/weather/migrations/: 0001_initial.py
templates/: base.html
