[project]
name = "python-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.4",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "ipython>=9.12.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "siteweather.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "mypy==1.11.1",
    "responses>=0.26.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260513",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations"]
mypy_path = "siteweather"

[tool.django-stubs]
django_settings_module = "siteweather.settings.test"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"